[package]
name = "johnston"
description = "utilities for generatating JI pitch lattices"
version = "0.1.1"
license = "MIT"
edition = "2018"
authors = ["Joseph Post <joe@jcpst.com>"]
repository = "https://github.com/jcpst/johnston"

[dependencies]
rug = { version = "1.1.1", features = ["integer", "rational", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
