[package]
name = "johnston"
description = "A utility for generatating JI pitch lattices"
version = "0.2.0"
license = "MIT"
edition = "2018"
authors = ["Joseph Post <joe@jcpst.com>"]
repository = "https://github.com/jcpst/johnston"

[dependencies]
num = { version = "0.2", serde = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
