[package]
name = "johnston-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ji"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.4"
serde_json = "1"
johnston = { path = "../johnston", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.0"
